cocos2d 类原型上扩展的方法，在creator.d.ts声明文件中手动添加相关接口

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     //"listEmittedFiles": true
   },
 
-  "include": [
-    //"namespaces"
-  ],
+  // "include": [
+  //   "namespaces"
+  // ],
 
   "exclude": [
     "node_modules"
